Initial creation of P2P chat for the JavaFXApplication